--- a/style.css
+++ b/style.css
@@ -18,3 +18,21 @@ body {
   padding: 0;
   color: #0d1b2a;
 }
+
+.container {
+  position: relative;
+  background-color: #ced4da;
+  border: 3px solid #1b263b;
+  border-radius: 10px;
+  padding: 30px;
+  max-width: 1000px;
+  text-align: center;
+}
+
+.code-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+  padding: 0 10px;
+}
