--- a/style.css
+++ b/style.css
@@ -36,3 +36,15 @@ body {
   margin: 40px 0;
   padding: 0 10px;
 }
+
+.code {
+  background-color: #adb5bd;
+  border-radius: 5px;
+  font-size: 75px;
+  height: 120px;
+  width: 100px;
+  border: 1px solid #eee;
+  margin: 1%;
+  text-align: center;
+  font-weight: 300;
+}
